--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Hi Theme</title>
-  <link rel="stylesheet" href="/CSS/style1.css" />
+  <link rel="stylesheet" href="CSS/style1.css" />
   <link rel="stylesheet" href="/ICON/fontawesome-free-6.3.0-web/css/all.min.css" />
   <link rel="icon" type="image/png" href="/IMG/logoTitile.png"/></head>
 
