--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Hi Theme</title>
   <link rel="stylesheet" href="CSS/style1.css" />
-  <link rel="stylesheet" href="/ICON/fontawesome-free-6.3.0-web/css/all.min.css" />
+  <link rel="stylesheet" href="ICON/fontawesome-free-6.3.0-web/css/all.min.css" />
   <link rel="icon" type="image/png" href="/IMG/logoTitile.png"/></head>
 
 </head>
@@ -35,10 +35,10 @@
 
           <div class="header__form3-moreLanguage">
             <p class="header__form3-moreLaguage-text1">
-              <img src="/IMG/eglish.png" alt="" />English
+              <img src="IMG/eglish.png" alt="" />English
             </p>
             <p class="header__form3-moreLaguage-text2">
-              <img src="/IMG/ar.png" alt="" />Arabic
+              <img src="IMG/ar.png" alt="" />Arabic
             </p>
           </div>
         </div>
@@ -60,7 +60,7 @@
   <!-- header2 -->
   <div class="header2">
     <div class="header2__logo">
-      <img src="/IMG/logo.png" alt="" />
+      <img src="IMG/logo.png" alt="" />
     </div>
     <div class="header2__menu">
       <!-- HOME -->
@@ -176,7 +176,7 @@
               <li>Accessories</li>
             </ul>
             <div class="header2__menu-morePROMOTION-img">
-              <img src="/IMG/headphone.jpg" alt="" />
+              <img src="IMG/headphone.jpg" alt="" />
             </div>
           </div>
         </div>
@@ -190,7 +190,7 @@
           <div class="header2__menu-moreACCESSORIES-listItem">
             <div class="header2__menu-moreACCESSORIES-img">
               <div class="header2__menu-moreACCESSORIES-imgItem">
-                <img src="/IMG/head1.png" alt="" style="width: 71%" />
+                <img src="IMG/head1.png" alt="" style="width: 71%" />
               </div>
 
               <hr />
@@ -201,7 +201,7 @@
 
             <div class="header2__menu-moreACCESSORIES-img">
               <div class="header2__menu-moreACCESSORIES-imgItem">
-                <img src="/IMG/head2.png" alt="" />
+                <img src="IMG/head2.png" alt="" />
               </div>
               <hr />
               <div class="header2__menu-moreACCESSORIES-content">
@@ -211,7 +211,7 @@
 
             <div class="header2__menu-moreACCESSORIES-img">
               <div class="header2__menu-moreACCESSORIES-imgItem">
-                <img src="/IMG/head3.png" alt="" />
+                <img src="IMG/head3.png" alt="" />
               </div>
               <br />
               <hr />
@@ -342,19 +342,19 @@
 
   <!-- slide 01 -->
   <div class="slide">
-    <img src="/IMG/bg01.png" alt="" class="slide__bgMain-item1" />
+    <img src="IMG/bg01.png" alt="" class="slide__bgMain-item1" />
 
     <div class="slide__backGoundMain">
       <div class="slide__mainText">
         <h2 style="color: rgb(92, 92, 92)">Best Collection</h2>
         <h1 style="font-weight: 900">APPLE MACBOOK SERIES 2</h1>
-        <button class="slide__mainText-btn"><a href="/HTML/shop.html" style="text-decoration: none;color: #000000;">SHOP
+        <button class="slide__mainText-btn"><a href="HTML/shop.html" style="text-decoration: none;color: #000000;">SHOP
             NOW</a></button>
       </div>
 
       <div class="slide__mainImg"></div>
     </div>
-    <img src="/IMG/bg04.png" alt="" class="slide__bgMain-item4" />
+    <img src="IMG/bg04.png" alt="" class="slide__bgMain-item4" />
   </div>
 
   <!-- Wellcom -->
@@ -506,14 +506,14 @@
   <div class="sidebar">
     <div class="sidebar__main">
       <div class="sidebar__main-list">
-        <img src="/IMG/imgsanpham/sp0.jpg" alt="" />
-        <img src="/IMG/imgsanpham/sp1.jpg" alt="" />
-        <img src="/IMG/imgsanpham/sp2.jpg" alt="" />
-        <img src="/IMG/imgsanpham/sp3.jpg" alt="" />
+        <img src="IMG/imgsanpham/sp0.jpg" alt="" />
+        <img src="IMG/imgsanpham/sp1.jpg" alt="" />
+        <img src="IMG/imgsanpham/sp2.jpg" alt="" />
+        <img src="IMG/imgsanpham/sp3.jpg" alt="" />
       </div>
 
       <div class="sidebar__main-itemsMain">
-        <img src="/IMG/imgsanpham/sp4.jpg" alt="" />
+        <img src="IMG/imgsanpham/sp4.jpg" alt="" />
       </div>
 
       <div class="sidebar__main-infor">
