--- a/HTML/shop.html
+++ b/HTML/shop.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shop</title>
-    <link rel="stylesheet" href="/CSS/shop.css" />
-    <link rel="icon" type="image/png" href="/IMG/logoTitile.png"/></head>
+    <link rel="stylesheet" href="CSS/shop.css" />
+    <link rel="icon" type="image/png" href="IMG/logoTitile.png"/></head>
     <link
       rel="stylesheet"
-      href="/ICON/fontawesome-free-6.3.0-web/css/all.min.css"
+      href="ICON/fontawesome-free-6.3.0-web/css/all.min.css"
     />
   </head>
   <body>
@@ -36,10 +36,10 @@
 
             <div class="header__form3-moreLanguage">
               <p class="header__form3-moreLaguage-text1">
-                <img src="/IMG/eglish.png" alt="" />English
+                <img src="IMG/eglish.png" alt="" />English
               </p>
               <p class="header__form3-moreLaguage-text2">
-                <img src="/IMG/ar.png" alt="" />Arabic
+                <img src="IMG/ar.png" alt="" />Arabic
               </p>
             </div>
           </div>
@@ -62,7 +62,7 @@
     <!-- header2 -->
   <div class="header2">
     <div class="header2__logo">
-      <img src="/IMG/logoshop.png" alt="" />
+      <img src="IMG/logoshop.png" alt="" />
     </div>
     <div class="header2__menu">
       <!-- HOME -->
@@ -178,7 +178,7 @@
               <li>Accessories</li>
             </ul>
             <div class="header2__menu-morePROMOTION-img">
-              <img src="/IMG/headphone.jpg" alt="" />
+              <img src="IMG/headphone.jpg" alt="" />
             </div>
           </div>
         </div>
@@ -192,7 +192,7 @@
           <div class="header2__menu-moreACCESSORIES-listItem">
             <div class="header2__menu-moreACCESSORIES-img">
               <div class="header2__menu-moreACCESSORIES-imgItem">
-                <img src="/IMG/head1.png" alt="" style="width: 71%" />
+                <img src="IMG/head1.png" alt="" style="width: 71%" />
               </div>
 
               <hr />
@@ -203,7 +203,7 @@
 
             <div class="header2__menu-moreACCESSORIES-img">
               <div class="header2__menu-moreACCESSORIES-imgItem">
-                <img src="/IMG/head2.png" alt="" />
+                <img src="IMG/head2.png" alt="" />
               </div>
               <hr />
               <div class="header2__menu-moreACCESSORIES-content">
@@ -213,7 +213,7 @@
 
             <div class="header2__menu-moreACCESSORIES-img">
               <div class="header2__menu-moreACCESSORIES-imgItem">
-                <img src="/IMG/head3.png" alt="" />
+                <img src="IMG/head3.png" alt="" />
               </div>
               <br />
               <hr />
@@ -359,10 +359,10 @@
         <div class="sidebar__main">
           <div class="sidebar__main-oclock">
             <h1 class="oclock" style="color: #ff4d00; font-size: 20px"></h1>
-            <script src="/JS/oclock.js"></script>
+            <script src="JS/oclock.js"></script>
           </div>
           <div class="sidebar__main-itemsMain">
-            <img src="/IMG/productHeadphone/head4.jpg" alt="" />
+            <img src="IMG/productHeadphone/head4.jpg" alt="" />
           </div>
 
           <div class="sidebar__main-infor">
@@ -471,21 +471,21 @@
         </div>
 
         <div class="product-item">
-          <img src="/IMG/productHeadphone/head1.jpg" alt="" />
-          <img src="/IMG/productHeadphone/head2.jpg" alt="" />
-          <img src="/IMG/productHeadphone/head3.jpg" alt="" />
-          <img src="/IMG/productHeadphone/head4.jpg" alt="" />
-          <img src="/IMG/productHeadphone/head5.jpg" alt="" />
-          <img src="/IMG/productHeadphone/head6.jpg" alt="" />
-          <img src="/IMG/productHeadphone/head7.jpg" alt="" />
-          <img src="/IMG/productHeadphone/head8.jpg" alt="" />
+          <img src="IMG/productHeadphone/head1.jpg" alt="" />
+          <img src="IMG/productHeadphone/head2.jpg" alt="" />
+          <img src="IMG/productHeadphone/head3.jpg" alt="" />
+          <img src="IMG/productHeadphone/head4.jpg" alt="" />
+          <img src="IMG/productHeadphone/head5.jpg" alt="" />
+          <img src="IMG/productHeadphone/head6.jpg" alt="" />
+          <img src="IMG/productHeadphone/head7.jpg" alt="" />
+          <img src="IMG/productHeadphone/head8.jpg" alt="" />
 
         </div>
 
         <div class="sidebar__slider">
-          <img src="/IMG/sliderHome/banner1.jpg" alt="">
-          <img src="/IMG/sliderHome/banner2.jpg" alt="">
-          <img src="/IMG/sliderHome/banner3.jpg" alt="">
+          <img src="IMG/sliderHome/banner1.jpg" alt="">
+          <img src="IMG/sliderHome/banner2.jpg" alt="">
+          <img src="IMG/sliderHome/banner3.jpg" alt="">
     
         </div>
       </div>
@@ -524,7 +524,7 @@
         <div class="sell_product ">
           <div class="sell_product-list">
             <div class="sell_product-img">
-              <img src="/IMG/imgsanpham/sp0.jpg" alt="" />
+              <img src="IMG/imgsanpham/sp0.jpg" alt="" />
             </div>
             <div class="sell_product-card">
               <div class="sell_product-more">
@@ -546,7 +546,7 @@
           </div>
           <div class="sell_product-list">
             <div class="sell_product-img">
-              <img src="/IMG/imgsanpham/sp1.jpg" alt="" />
+              <img src="IMG/imgsanpham/sp1.jpg" alt="" />
             </div>
             <div class="sell_product-card">
               <div class="sell_product-more">
@@ -568,7 +568,7 @@
           </div>
           <div class="sell_product-list">
             <div class="sell_product-img">
-              <img src="/IMG/imgsanpham/sp3.jpg" alt="" />
+              <img src="IMG/imgsanpham/sp3.jpg" alt="" />
             </div>
             <div class="sell_product-card">
               <div class="sell_product-more">
@@ -591,7 +591,7 @@
 
           <div class="sell_product-list">
             <div class="sell_product-img">
-              <img src="/IMG/imgsanpham/sp4.jpg" alt="" />
+              <img src="IMG/imgsanpham/sp4.jpg" alt="" />
             </div>
             <div class="sell_product-card">
               <div class="sell_product-more">
@@ -616,7 +616,7 @@
         <div class="sell_product">
           <div class="sell_product-list">
             <div class="sell_product-img">
-              <img src="/IMG/imgsanpham/sp5.jpg" alt="" />
+              <img src="IMG/imgsanpham/sp5.jpg" alt="" />
             </div>
             <div class="sell_product-card">
               <div class="sell_product-more">
@@ -638,7 +638,7 @@
           </div>
           <div class="sell_product-list">
             <div class="sell_product-img">
-              <img src="/IMG/imgsanpham/sp6.jpg" alt="" />
+              <img src="IMG/imgsanpham/sp6.jpg" alt="" />
             </div>
             <div class="sell_product-card">
               <div class="sell_product-more">
@@ -660,7 +660,7 @@
           </div>
           <div class="sell_product-list">
             <div class="sell_product-img">
-              <img src="/IMG/imgsanpham/sp7.jpg" alt="" />
+              <img src="IMG/imgsanpham/sp7.jpg" alt="" />
             </div>
             <div class="sell_product-card">
               <div class="sell_product-more">
@@ -683,7 +683,7 @@
 
           <div class="sell_product-list">
             <div class="sell_product-img">
-              <img src="/IMG/imgsanpham/sp2.jpg" alt="" />
+              <img src="IMG/imgsanpham/sp2.jpg" alt="" />
             </div>
             <div class="sell_product-card">
               <div class="sell_product-more">
@@ -712,7 +712,7 @@
         <div class="sell_product ">
           <div class="sell_product-list">
             <div class="sell_product-img">
-              <img src="/IMG/productHeadphone/head1.jpg" alt="" />
+              <img src="IMG/productHeadphone/head1.jpg" alt="" />
             </div>
             <div class="sell_product-card">
               <div class="sell_product-more">
@@ -734,7 +734,7 @@
           </div>
           <div class="sell_product-list">
             <div class="sell_product-img">
-              <img src="/IMG/productHeadphone/head2.jpg" alt="" />
+              <img src="IMG/productHeadphone/head2.jpg" alt="" />
             </div>
             <div class="sell_product-card">
               <div class="sell_product-more">
@@ -756,7 +756,7 @@
           </div>
           <div class="sell_product-list">
             <div class="sell_product-img">
-              <img src="/IMG/productHeadphone/head3.jpg" alt="" />
+              <img src="IMG/productHeadphone/head3.jpg" alt="" />
             </div>
             <div class="sell_product-card">
               <div class="sell_product-more">
@@ -779,7 +779,7 @@
 
           <div class="sell_product-list">
             <div class="sell_product-img">
-              <img src="/IMG/productHeadphone/head4.jpg" alt="" />
+              <img src="IMG/productHeadphone/head4.jpg" alt="" />
             </div>
             <div class="sell_product-card">
               <div class="sell_product-more">
@@ -804,7 +804,7 @@
         <div class="sell_product">
           <div class="sell_product-list">
             <div class="sell_product-img">
-              <img src="/IMG/productHeadphone/head5.jpg" alt="" />
+              <img src="IMG/productHeadphone/head5.jpg" alt="" />
             </div>
             <div class="sell_product-card">
               <div class="sell_product-more">
