--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Hi Theme</title>
   <link rel="stylesheet" href="CSS/style1.css" />
   <link rel="stylesheet" href="ICON/fontawesome-free-6.3.0-web/css/all.min.css" />
-  <link rel="icon" type="image/png" href="/IMG/logoTitile.png"/></head>
+  <link rel="icon" type="image/png" href="IMG/logoTitile.png"/></head>
 
 </head>
 
