--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
       <!-- SHOP -->
       <div class="header2__menu-SHOP">
-        <a class="shop" href="/HTML/shop.html">SHOP</a>
+        <a class="shop" href="HTML/shop.html">SHOP</a>
 
         <div class="header2__menu-moreSHOP">
           <div class="header2__menu-moreSHOP-listItem">
