--- a/HTML/shop.html
+++ b/HTML/shop.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shop</title>
-    <link rel="stylesheet" href="/CSS/shop.css" />
-    <link rel="icon" type="image/png" href="/IMG/logoTitile.png"/></head>
+    <link rel="stylesheet" href="../CSS/shop.css" />
+    <link rel="icon" type="image/png" href="../IMG/logoTitile.png"/></head>
     <link
       rel="stylesheet"
-      href="/ICON/fontawesome-free-6.3.0-web/css/all.min.css"
+      href="../ICON/fontawesome-free-6.3.0-web/css/all.min.css"
     />
   </head>
   <body>
