--- a/HTML/portfolio.html
+++ b/HTML/portfolio.html
@@ -72,7 +72,7 @@
       <div class="header2__menu">
         <!-- HOME -->
         <div class="header2__menu-HOME">
-          <a class="home" href="/index.html">HOME</a>
+          <a class="home" href="../index.html">HOME</a>
   
           <div class="header2__menu-moreHOME">
             <div class="header2__menu-moreHOME-listItem">
@@ -103,7 +103,7 @@
   
         <!-- SHOP -->
         <div class="header2__menu-SHOP">
-          <a class="shop" href="/HTML/shop.html">SHOP</a>
+          <a class="shop" href="shop.html">SHOP</a>
   
           <div class="header2__menu-moreSHOP">
             <div class="header2__menu-moreSHOP-listItem">
@@ -232,7 +232,7 @@
   
         <!-- BLOG -->
         <div class="header2__menu-BLOG">
-          <a class="menu-blog" href="/HTML/blog.html">BLOG</a>
+          <a class="menu-blog" href="blog.html">BLOG</a>
   
           <div class="header2__menu-moreBLOG">
             <div class="header2__menu-moreBLOG-listItem">
@@ -273,7 +273,7 @@
   
         <!--PORTFLOLIO  -->
         <div class="header2__menu-PORTFOLIO">
-          <a class="portfolio" href="/HTML/portfolio.html">PORTFOLIO</a>
+          <a class="portfolio" href="portfolio.html">PORTFOLIO</a>
   
           <div class="header2__menu-morePORTFOLIO">
             <div class="header2__menu-morePORTFOLIO-listItem">
@@ -295,8 +295,8 @@
           <div class="header2__menu-morePAGE">
             <div class="header2__menu-morePAGE-listItem">
               <ul class="header2__menu-morePAGE-list">
-                <li><a href="/HTML/aboutUs.html"> About Us </a> </li>
-                <li><a href="/HTML/contactUs.html"> Contact Us</a></li>
+                <li><a href="aboutUs.html"> About Us </a> </li>
+                <li><a href="contactUs.html"> Contact Us</a></li>
                 <li><a href=""> Page 404</a></li>
               </ul>
             </div>
@@ -346,6 +346,7 @@
         </div>
       </div>
     </div>
+  
 
     <div class="slide">
         <h1>PORTFOLIO</h1>
