--- a/HTML/shop.html
+++ b/HTML/shop.html
@@ -36,10 +36,10 @@
 
             <div class="header__form3-moreLanguage">
               <p class="header__form3-moreLaguage-text1">
-                <img src="/IMG/eglish.png" alt="" />English
+                <img src="../IMG/eglish.png" alt="" />English
               </p>
               <p class="header__form3-moreLaguage-text2">
-                <img src="/IMG/ar.png" alt="" />Arabic
+                <img src="../IMG/ar.png" alt="" />Arabic
               </p>
             </div>
           </div>
@@ -62,12 +62,12 @@
     <!-- header2 -->
   <div class="header2">
     <div class="header2__logo">
-      <img src="/IMG/logoshop.png" alt="" />
+      <img src="../IMG/logoshop.png" alt="" />
     </div>
     <div class="header2__menu">
       <!-- HOME -->
       <div class="header2__menu-HOME">
-        <a class="home" href="/index.html">HOME</a>
+        <a class="home" href="../index.html">HOME</a>
 
         <div class="header2__menu-moreHOME">
           <div class="header2__menu-moreHOME-listItem">
@@ -98,7 +98,7 @@
 
       <!-- SHOP -->
       <div class="header2__menu-SHOP">
-        <a class="shop" href="/HTML/shop.html">SHOP</a>
+        <a class="shop" href="shop.html">SHOP</a>
 
         <div class="header2__menu-moreSHOP">
           <div class="header2__menu-moreSHOP-listItem">
@@ -178,7 +178,7 @@
               <li>Accessories</li>
             </ul>
             <div class="header2__menu-morePROMOTION-img">
-              <img src="/IMG/headphone.jpg" alt="" />
+              <img src="../IMG/headphone.jpg" alt="" />
             </div>
           </div>
         </div>
@@ -192,7 +192,7 @@
           <div class="header2__menu-moreACCESSORIES-listItem">
             <div class="header2__menu-moreACCESSORIES-img">
               <div class="header2__menu-moreACCESSORIES-imgItem">
-                <img src="/IMG/head1.png" alt="" style="width: 71%" />
+                <img src="../IMG/head1.png" alt="" style="width: 71%" />
               </div>
 
               <hr />
@@ -203,7 +203,7 @@
 
             <div class="header2__menu-moreACCESSORIES-img">
               <div class="header2__menu-moreACCESSORIES-imgItem">
-                <img src="/IMG/head2.png" alt="" />
+                <img src="../IMG/head2.png" alt="" />
               </div>
               <hr />
               <div class="header2__menu-moreACCESSORIES-content">
@@ -213,7 +213,7 @@
 
             <div class="header2__menu-moreACCESSORIES-img">
               <div class="header2__menu-moreACCESSORIES-imgItem">
-                <img src="/IMG/head3.png" alt="" />
+                <img src="../IMG/head3.png" alt="" />
               </div>
               <br />
               <hr />
@@ -227,7 +227,7 @@
 
       <!-- BLOG -->
       <div class="header2__menu-BLOG">
-        <a class="menu-blog" href="/HTML/blog.html">BLOG</a>
+        <a class="menu-blog" href="blog.html">BLOG</a>
 
         <div class="header2__menu-moreBLOG">
           <div class="header2__menu-moreBLOG-listItem">
@@ -268,7 +268,7 @@
 
       <!--PORTFLOLIO  -->
       <div class="header2__menu-PORTFOLIO">
-        <a class="portfolio" href="/HTML/portfolio.html">PORTFOLIO</a>
+        <a class="portfolio" href="portfolio.html">PORTFOLIO</a>
 
         <div class="header2__menu-morePORTFOLIO">
           <div class="header2__menu-morePORTFOLIO-listItem">
@@ -290,8 +290,8 @@
         <div class="header2__menu-morePAGE">
           <div class="header2__menu-morePAGE-listItem">
             <ul class="header2__menu-morePAGE-list">
-              <li><a href="/HTML/aboutUs.html"> About Us </a> </li>
-              <li><a href="/HTML/contactUs.html"> Contact Us</a></li>
+              <li><a href="aboutUs.html"> About Us </a> </li>
+              <li><a href="contactUs.html"> Contact Us</a></li>
               <li><a href=""> Page 404</a></li>
             </ul>
           </div>
@@ -359,10 +359,10 @@
         <div class="sidebar__main">
           <div class="sidebar__main-oclock">
             <h1 class="oclock" style="color: #ff4d00; font-size: 20px"></h1>
-            <script src="/JS/oclock.js"></script>
+            <script src="../JS/oclock.js"></script>
           </div>
           <div class="sidebar__main-itemsMain">
-            <img src="/IMG/productHeadphone/head4.jpg" alt="" />
+            <img src="../IMG/productHeadphone/head4.jpg" alt="" />
           </div>
 
           <div class="sidebar__main-infor">
@@ -471,21 +471,21 @@
         </div>
 
         <div class="product-item">
-          <img src="/IMG/productHeadphone/head1.jpg" alt="" />
-          <img src="/IMG/productHeadphone/head2.jpg" alt="" />
-          <img src="/IMG/productHeadphone/head3.jpg" alt="" />
-          <img src="/IMG/productHeadphone/head4.jpg" alt="" />
-          <img src="/IMG/productHeadphone/head5.jpg" alt="" />
-          <img src="/IMG/productHeadphone/head6.jpg" alt="" />
-          <img src="/IMG/productHeadphone/head7.jpg" alt="" />
-          <img src="/IMG/productHeadphone/head8.jpg" alt="" />
+          <img src="../IMG/productHeadphone/head1.jpg" alt="" />
+          <img src="../IMG/productHeadphone/head2.jpg" alt="" />
+          <img src="../IMG/productHeadphone/head3.jpg" alt="" />
+          <img src="../IMG/productHeadphone/head4.jpg" alt="" />
+          <img src="../IMG/productHeadphone/head5.jpg" alt="" />
+          <img src="../IMG/productHeadphone/head6.jpg" alt="" />
+          <img src="../IMG/productHeadphone/head7.jpg" alt="" />
+          <img src="../IMG/productHeadphone/head8.jpg" alt="" />
 
         </div>
 
         <div class="sidebar__slider">
-          <img src="/IMG/sliderHome/banner1.jpg" alt="">
-          <img src="/IMG/sliderHome/banner2.jpg" alt="">
-          <img src="/IMG/sliderHome/banner3.jpg" alt="">
+          <img src="../IMG/sliderHome/banner1.jpg" alt="">
+          <img src="../IMG/sliderHome/banner2.jpg" alt="">
+          <img src="../IMG/sliderHome/banner3.jpg" alt="">
     
         </div>
       </div>
@@ -524,7 +524,7 @@
         <div class="sell_product ">
           <div class="sell_product-list">
             <div class="sell_product-img">
-              <img src="/IMG/imgsanpham/sp0.jpg" alt="" />
+              <img src="../IMG/imgsanpham/sp0.jpg" alt="" />
             </div>
             <div class="sell_product-card">
               <div class="sell_product-more">
@@ -546,7 +546,7 @@
           </div>
           <div class="sell_product-list">
             <div class="sell_product-img">
-              <img src="/IMG/imgsanpham/sp1.jpg" alt="" />
+              <img src="../IMG/imgsanpham/sp1.jpg" alt="" />
             </div>
             <div class="sell_product-card">
               <div class="sell_product-more">
@@ -568,7 +568,7 @@
           </div>
           <div class="sell_product-list">
             <div class="sell_product-img">
-              <img src="/IMG/imgsanpham/sp3.jpg" alt="" />
+              <img src="../IMG/imgsanpham/sp3.jpg" alt="" />
             </div>
             <div class="sell_product-card">
               <div class="sell_product-more">
@@ -591,7 +591,7 @@
 
           <div class="sell_product-list">
             <div class="sell_product-img">
-              <img src="/IMG/imgsanpham/sp4.jpg" alt="" />
+              <img src="../IMG/imgsanpham/sp4.jpg" alt="" />
             </div>
             <div class="sell_product-card">
               <div class="sell_product-more">
@@ -616,7 +616,7 @@
         <div class="sell_product">
           <div class="sell_product-list">
             <div class="sell_product-img">
-              <img src="/IMG/imgsanpham/sp5.jpg" alt="" />
+              <img src="../IMG/imgsanpham/sp5.jpg" alt="" />
             </div>
             <div class="sell_product-card">
               <div class="sell_product-more">
@@ -638,7 +638,7 @@
           </div>
           <div class="sell_product-list">
             <div class="sell_product-img">
-              <img src="/IMG/imgsanpham/sp6.jpg" alt="" />
+              <img src="../IMG/imgsanpham/sp6.jpg" alt="" />
             </div>
             <div class="sell_product-card">
               <div class="sell_product-more">
@@ -660,7 +660,7 @@
           </div>
           <div class="sell_product-list">
             <div class="sell_product-img">
-              <img src="/IMG/imgsanpham/sp7.jpg" alt="" />
+              <img src="../IMG/imgsanpham/sp7.jpg" alt="" />
             </div>
             <div class="sell_product-card">
               <div class="sell_product-more">
@@ -683,7 +683,7 @@
 
           <div class="sell_product-list">
             <div class="sell_product-img">
-              <img src="/IMG/imgsanpham/sp2.jpg" alt="" />
+              <img src="../IMG/imgsanpham/sp2.jpg" alt="" />
             </div>
             <div class="sell_product-card">
               <div class="sell_product-more">
@@ -712,7 +712,7 @@
         <div class="sell_product ">
           <div class="sell_product-list">
             <div class="sell_product-img">
-              <img src="/IMG/productHeadphone/head1.jpg" alt="" />
+              <img src="../IMG/productHeadphone/head1.jpg" alt="" />
             </div>
             <div class="sell_product-card">
               <div class="sell_product-more">
@@ -734,7 +734,7 @@
           </div>
           <div class="sell_product-list">
             <div class="sell_product-img">
-              <img src="/IMG/productHeadphone/head2.jpg" alt="" />
+              <img src="../IMG/productHeadphone/head2.jpg" alt="" />
             </div>
             <div class="sell_product-card">
               <div class="sell_product-more">
@@ -756,7 +756,7 @@
           </div>
           <div class="sell_product-list">
             <div class="sell_product-img">
-              <img src="/IMG/productHeadphone/head3.jpg" alt="" />
+              <img src="../IMG/productHeadphone/head3.jpg" alt="" />
             </div>
             <div class="sell_product-card">
               <div class="sell_product-more">
@@ -779,7 +779,7 @@
 
           <div class="sell_product-list">
             <div class="sell_product-img">
-              <img src="/IMG/productHeadphone/head4.jpg" alt="" />
+              <img src="../IMG/productHeadphone/head4.jpg" alt="" />
             </div>
             <div class="sell_product-card">
               <div class="sell_product-more">
@@ -804,7 +804,7 @@
         <div class="sell_product">
           <div class="sell_product-list">
             <div class="sell_product-img">
-              <img src="/IMG/productHeadphone/head5.jpg" alt="" />
+              <img src="../IMG/productHeadphone/head5.jpg" alt="" />
             </div>
             <div class="sell_product-card">
               <div class="sell_product-more">
@@ -826,7 +826,7 @@
           </div>
           <div class="sell_product-list">
             <div class="sell_product-img">
-              <img src="/IMG/productHeadphone/head6.jpg" alt="" />
+              <img src="../IMG/productHeadphone/head6.jpg" alt="" />
             </div>
             <div class="sell_product-card">
               <div class="sell_product-more">
@@ -848,7 +848,7 @@
           </div>
           <div class="sell_product-list">
             <div class="sell_product-img">
-              <img src="/IMG/productHeadphone/head7.jpg" alt="" />
+              <img src="../IMG/productHeadphone/head7.jpg" alt="" />
             </div>
             <div class="sell_product-card">
               <div class="sell_product-more">
@@ -871,7 +871,7 @@
 
           <div class="sell_product-list">
             <div class="sell_product-img">
-              <img src="/IMG/productHeadphone/head8.jpg" alt="" />
+              <img src="../IMG/productHeadphone/head8.jpg" alt="" />
             </div>
             <div class="sell_product-card">
               <div class="sell_product-more">
@@ -901,7 +901,7 @@
         <div class="sell_product ">
           <div class="sell_product-list">
             <div class="sell_product-img">
-              <img src="/IMG/giay/giay1.jpg" alt="" />
+              <img src="../IMG/giay/giay1.jpg" alt="" />
             </div>
             <div class="sell_product-card">
               <div class="sell_product-more">
@@ -923,7 +923,7 @@
           </div>
           <div class="sell_product-list">
             <div class="sell_product-img">
-              <img src="/IMG/giay/giay2.jpg" alt="" />
+              <img src="../IMG/giay/giay2.jpg" alt="" />
             </div>
             <div class="sell_product-card">
               <div class="sell_product-more">
@@ -945,7 +945,7 @@
           </div>
           <div class="sell_product-list">
             <div class="sell_product-img">
-              <img src="/IMG/giay/giay3.jpg" alt="" />
+              <img src="../IMG/giay/giay3.jpg" alt="" />
             </div>
             <div class="sell_product-card">
               <div class="sell_product-more">
@@ -968,7 +968,7 @@
 
           <div class="sell_product-list">
             <div class="sell_product-img">
-              <img src="/IMG/giay/giay4.jpg" alt="" />
+              <img src="../IMG/giay/giay4.jpg" alt="" />
             </div>
             <div class="sell_product-card">
               <div class="sell_product-more">
@@ -993,7 +993,7 @@
         <div class="sell_product">
           <div class="sell_product-list">
             <div class="sell_product-img">
-              <img src="/IMG/giay/giay5.jpg" alt="" />
+              <img src="../IMG/giay/giay5.jpg" alt="" />
             </div>
             <div class="sell_product-card">
               <div class="sell_product-more">
@@ -1015,7 +1015,7 @@
           </div>
           <div class="sell_product-list">
             <div class="sell_product-img">
-              <img src="/IMG/giay/giay6.jpg" alt="" />
+              <img src="../IMG/giay/giay6.jpg" alt="" />
             </div>
             <div class="sell_product-card">
               <div class="sell_product-more">
@@ -1037,7 +1037,7 @@
           </div>
           <div class="sell_product-list">
             <div class="sell_product-img">
-              <img src="/IMG/giay/giay7.jpg" alt="" />
+              <img src="../IMG/giay/giay7.jpg" alt="" />
             </div>
             <div class="sell_product-card">
               <div class="sell_product-more">
@@ -1060,7 +1060,7 @@
 
           <div class="sell_product-list">
             <div class="sell_product-img">
-              <img src="/IMG/giay/giay8.jpg" alt="" />
+              <img src="../IMG/giay/giay8.jpg" alt="" />
             </div>
             <div class="sell_product-card">
               <div class="sell_product-more">
@@ -1085,7 +1085,7 @@
     </div>
 
   </div>
-  <script src="/JS/product2.js"></script>
+  <script src="../JS/product2.js"></script>
 
   <!--  mentor-->
 
@@ -1128,7 +1128,7 @@
           <div class="sell_product ">
             <div class="sell_product-list">
               <div class="sell_product-img">
-                <img src="/IMG/productHeadphone/head1.jpg" alt="" />
+                <img src="../IMG/productHeadphone/head1.jpg" alt="" />
               </div>
               <div class="sell_product-card">
                 <div class="sell_product-more">
@@ -1150,7 +1150,7 @@
             </div>
             <div class="sell_product-list">
               <div class="sell_product-img">
-                <img src="/IMG/productHeadphone/head2.jpg" alt="" />
+                <img src="../IMG/productHeadphone/head2.jpg" alt="" />
               </div>
               <div class="sell_product-card">
                 <div class="sell_product-more">
@@ -1172,7 +1172,7 @@
             </div>
             <div class="sell_product-list">
               <div class="sell_product-img">
-                <img src="/IMG/productHeadphone/head3.jpg" alt="" />
+                <img src="../IMG/productHeadphone/head3.jpg" alt="" />
               </div>
               <div class="sell_product-card">
                 <div class="sell_product-more">
@@ -1195,7 +1195,7 @@
   
             <div class="sell_product-list">
               <div class="sell_product-img">
-                <img src="/IMG/productHeadphone/head4.jpg" alt="" />
+                <img src="../IMG/productHeadphone/head4.jpg" alt="" />
               </div>
               <div class="sell_product-card">
                 <div class="sell_product-more">
@@ -1281,7 +1281,7 @@
         <!-- form 1 -->
         <div class="read__item--form">
           <div class="read__item-list">
-            <img src="/IMG/imgRead/imgread1.jpg" alt="" class="read__item-img" />
+            <img src="../IMG/imgRead/imgread1.jpg" alt="" class="read__item-img" />
             <p class="read__item-title">
               Nemo enim ipsam voluptatem quia voluptas sit aspernatur
             </p>
@@ -1301,7 +1301,7 @@
         <!-- form 2 -->
         <div class="read__item--form">
           <div class="read__item-list">
-            <img src="/IMG/imgRead/imgread2.jpg" alt="" class="read__item-img" />
+            <img src="../IMG/imgRead/imgread2.jpg" alt="" class="read__item-img" />
             <p class="read__item-title">
               Eaque ipsa quae ab illo inventore veritatis et velit esse
             </p>
@@ -1320,7 +1320,7 @@
         <!-- form 3 -->
         <div class="read__item--form">
           <div class="read__item-list">
-            <img src="/IMG/imgRead/imgread3.jpg" alt="" class="read__item-img" />
+            <img src="../IMG/imgRead/imgread3.jpg" alt="" class="read__item-img" />
             <p class="read__item-title">
               Natus error sit voluptatem accusan tium doloremque
             </p>
@@ -1344,22 +1344,22 @@
   <div class="logo">
     <div class="logo__form">
       <div class="logo__form-items">
-        <img src="/IMG/logo/bran1.jpg" alt="" />
+        <img src="../IMG/logo/bran1.jpg" alt="" />
       </div>
       <div class="logo__form-items">
-        <img src="/IMG/logo/bran2.jpg" alt="" />
+        <img src="../IMG/logo/bran2.jpg" alt="" />
       </div>
       <div class="logo__form-items">
-        <img src="/IMG/logo/bran3.jpg" alt="" />
+        <img src="../IMG/logo/bran3.jpg" alt="" />
       </div>
       <div class="logo__form-items">
-        <img src="/IMG/logo/bran4.jpg" alt="" />
+        <img src="../IMG/logo/bran4.jpg" alt="" />
       </div>
       <div class="logo__form-items">
-        <img src="/IMG/logo/bran5.jpg" alt="" />
+        <img src="../IMG/logo/bran5.jpg" alt="" />
       </div>
       <div class="logo__form-items">
-        <img src="/IMG/logo/bran6.jpg" alt="" />
+        <img src="../IMG/logo/bran6.jpg" alt="" />
       </div>
     </div>
   </div>
@@ -1367,7 +1367,7 @@
   <div class="footer">
     <div class="footer__infor">
       <div class="footer__infor-logo">
-        <img src="/IMG/logoShop2.png" alt="" />
+        <img src="../IMG/logoShop2.png" alt="" />
       </div>
       <br />
       <div class="footer__infor-contact">
@@ -1385,7 +1385,7 @@
         <span style="font-weight: 700; color: #fff">PHONE:</span>
         <span style="color: #ff4000; font-weight: 700; font-size: 30px">1-88-345-6789</span>
         <br /><br />
-        <img src="/IMG/bank.png" alt="" />
+        <img src="../IMG/bank.png" alt="" />
       </div>
     </div>
 
